kstyle: consider activeSubControls when deciding arrow colour

This fixes hover colours in qqc2-desktop-style, which
has no widget for us to poke at, so we have to use
activeSubControls instead, which we do have, regardless
of whether or not there's a widget.

BUG: 434884